--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
-    "sequelize": "^6.12.0",
+    "sequelize": "^6.17.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
