Setup deploy no Heroku

--- a/.github/workflows/build-delivery-docker.yml
+++ b/.github/workflows/build-delivery-docker.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   docker:
-    name: "Build and push Docker image"
+    name: "Build and push Docker image to Docker Hub"
     runs-on: ubuntu-latest
     steps:
       -
@@ -28,4 +28,20 @@ jobs:
           context: .
           push: true
           tags: sidneijp/node_example:latest
+  deploy-heroku:
+    name: "Deploy on Heroku"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build, Push and Deploy to Heroku #set the whatever name you want to this step
+        id: heroku
+        uses: jctaveras/heroku-deploy@v1.0.0  # use the latest version of the action
+        with:
+          email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
+          api_key: ${{ secrets.HEROKU_API_KEY }} # your  heroku api key
+          app_name: ${{ secrets.HEROKU_APP_NAME }} # you aplication name
+          dockerfile_path: '' # set the path to the folder wher the Dokerfile is located
+          options: '' # Docker Build Options
+          formation: '' # Docker Dyno Formation. By default is web
           
