--- a/.github/workflows/build-delivery-docker.yml
+++ b/.github/workflows/build-delivery-docker.yml
@@ -41,7 +41,7 @@ jobs:
           email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your  heroku api key
           app_name: ${{ secrets.HEROKU_APP_NAME }} # you aplication name
-          dockerfile_path: '../../' # set the path to the folder wher the Dokerfile is located
+          dockerfile_path: '/home/runner/work/node_example/node_example' # set the path to the folder wher the Dokerfile is located
           options: '' # Docker Build Options
           formation: '' # Docker Dyno Formation. By default is web
           
