--- a/.github/workflows/build-delivery-docker.yml
+++ b/.github/workflows/build-delivery-docker.yml
@@ -33,15 +33,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.1.17
+        uses: actions/checkout@v2
       - name: Build, Push and Deploy to Heroku #set the whatever name you want to this step
         id: heroku
-        uses: jctaveras/heroku-deploy@v1.0.0  # use the latest version of the action
+        uses: jctaveras/heroku-deploy@v2.1.17  # use the latest version of the action
         with:
           email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your  heroku api key
           app_name: ${{ secrets.HEROKU_APP_NAME }} # you aplication name
-          dockerfile_path: '/home/runner/work/node_example/node_example' # set the path to the folder wher the Dokerfile is located
+          dockerfile_path: '' # set the path to the folder wher the Dokerfile is located
           options: '' # Docker Build Options
           formation: '' # Docker Dyno Formation. By default is web
           
