Corrige versão GH action heroku-deploy no workflow

--- a/.github/workflows/build-delivery-docker.yml
+++ b/.github/workflows/build-delivery-docker.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build, Push and Deploy to Heroku #set the whatever name you want to this step
         id: heroku
-        uses: jctaveras/heroku-deploy@v2.1.17  # use the latest version of the action
+        uses: jctaveras/heroku-deploy@2.1.17  # use the latest version of the action
         with:
           email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your  heroku api key
