Add formation nos inputs do heroku-deploy

--- a/.github/workflows/build-delivery-docker.yml
+++ b/.github/workflows/build-delivery-docker.yml
@@ -43,5 +43,5 @@ jobs:
           app_name: ${{ secrets.HEROKU_APP_NAME }} # you aplication name
           dockerfile_path: '' # set the path to the folder wher the Dokerfile is located
           options: '' # Docker Build Options
-          formation: '' # Docker Dyno Formation. By default is web
+          formation: 'web' # Docker Dyno Formation. By default is web
           
